--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -46,3 +46,39 @@
 	background-color: #fff;
 	box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
 }
+
+.gplmyplugactive {
+    display: inline-block;
+    color: #444;
+    box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
+    cursor: not-allowed;
+    vertical-align: middle;
+    max-width: 100px;
+    padding: 5px;
+    text-align: center;
+    background-color: #1cdc34;
+    border-radius: 3px;
+    width: 80px;
+    height: 20px;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: medium;
+}
+
+.gplmyplugnotactive{
+    display: inline-block;
+    color: #444;
+    box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
+    cursor: not-allowed;
+    vertical-align: middle;
+    max-width: 100px;
+    padding: 5px;
+    text-align: center;
+    background-color: #ff0332;
+    border-radius: 3px;
+    width: 100px;
+    height: 20px;
+    font-family: cursive;
+    font-weight: bold;
+    font-size: medium;	
+}
