--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -1,3 +1,40 @@
+.status_deactive {
+    background-color: #f44336;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    /* cursor: pointer; */
+    opacity: 0.65; 
+    cursor: not-allowed;
+  }
+  .status_active {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+}
+.status_active:hover {
+    background-color: #f44336;
+    color: white;
+  }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    width: 60%;
+  }
 .nav-tabs {
 	float: left;
 	width: 100%;
