--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -8,6 +8,7 @@
     display: inline-block;
     font-size: 16px;
     margin: 4px 2px;
+    font-family: inherit;
     transition-duration: 0.4s;
     /* cursor: pointer; */
     opacity: 0.65; 
@@ -21,6 +22,7 @@
     text-align: center;
     text-decoration: none;
     display: inline-block;
+    font-family: inherit;
     font-size: 16px;
     margin: 4px 2px;
     transition-duration: 0.4s;
@@ -88,7 +90,6 @@
     display: inline-block;
     color: #444;
     box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
-    cursor: not-allowed;
     vertical-align: middle;
     max-width: 100px;
     padding: 5px;
@@ -97,7 +98,7 @@
     border-radius: 3px;
     width: 80px;
     height: 20px;
-    font-family: cursive;
+    font-family: inherit;
     font-weight: bold;
     font-size: medium;
 }
@@ -106,7 +107,6 @@
     display: inline-block;
     color: #444;
     box-shadow: 0 0 5px -1px rgba(0,0,0,0.2);
-    cursor: not-allowed;
     vertical-align: middle;
     max-width: 100px;
     padding: 5px;
@@ -115,7 +115,7 @@
     border-radius: 3px;
     width: 100px;
     height: 20px;
-    font-family: cursive;
+    font-family: inherit;
     font-weight: bold;
     font-size: medium;	
 }
