--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -1,3 +1,44 @@
+table.updategpl
+{
+  width:100%;
+  border-collapse: collapse;
+}
+
+table.updategpl td, table.updategpl th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+table.updategpl tr:nth-child(even){background-color: #f2f2f2;}
+
+table.updategpl tr:hover {background-color: #ddd;}
+
+table.updategpl th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #7A9C59;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+
+.cardgpl {
+    background: #ffffff;
+    transition: 0.3s;
+    border-left-color: #6340c1 !important;
+    border: 1px solid #ccd0d4;
+    border-left-width: 4px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.04);
+    margin: 5px 15px 2px;
+    padding: 10px 12px;
+}
+
+.cardgpl h2 {
+    text-transform: uppercase;
+    color: #333333;
+}
+
 .status_deactive {
   background-color: #f44336;
   border: none;
@@ -13,33 +54,41 @@
   /* cursor: pointer; */
   opacity: 0.65; 
   cursor: not-allowed;
-  border-radius: 15px;
-  margin-top: 5px;
+  margin: 5px 0px;
+    text-transform: uppercase;
 }
 .status_active {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-family: inherit;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border-radius: 15px;
-  margin-top: 5px;
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-family: inherit;
+    font-size: 15px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+   /* border-radius: 15px; */
+    margin: 5px 0px;
+    text-transform: uppercase;
+
 }
+
 .status_active:hover {
   background-color: #f44336;
   color: white;
 }
 .card {
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  width: 60%;
+ background: #ffffff;
+    transition: 0.3s;
+    border-left-color: #46b450 !important;
+    border: 1px solid #ccd0d4;
+    border-left-width: 4px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.04);
+    margin: 5px 15px 2px;
+    padding: 10px 12px;
 }
 .nav-tabs {
 float: left;
@@ -85,9 +134,16 @@ display: none;
 
 .tab-content > .tab-pane.active {
 display: block;
-padding: 10px;
-background-color: #fff;
-box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
+    /* padding: 10px; */
+    background-color: #fff;
+    /* box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15); */
+    transition: 0.3s;
+    border-left-color: #c1408d !important;
+    border: 1px solid #ccd0d4;
+    border-left-width: 4px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.04);
+    margin: 5px 15px 2px;
+    padding: 10px 12px;
 }
 
 .gplmyplugactive {
@@ -124,24 +180,3 @@ box-shadow: 0 5px 4px -2px rgba(0, 0, 0, 0.15);
   font-size: 14px;	
 }
 
-.updategpl.table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-.updategpl.td th {
-  border: 1px solid #000;
-  text-align: left;
-  padding: 8px;
-  text-transform: capitalize;
-  }
-  
-  .updategpl.th{
-  background-color: #000;
-  color: rgb(11, 245, 108);
-  }
-
-  .updategpl.tr:nth-child(even) {
-  background-color: rgb(255, 255, 255);
-}
