--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -80,7 +80,7 @@ table.updategpl th {
   background-color: #f44336;
   color: white;
 }
-.card {
+.gplcard1 {
  background: #ffffff;
     transition: 0.3s;
     border-left-color: #46b450 !important;
