--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -36,7 +36,7 @@ table.updategpl th {
     border-left-width: 4px;
     box-shadow: 0 1px 1px rgba(0,0,0,.04);
     margin: 5px 15px 2px;
-    padding: 10px 12px;
+    padding: 10px 12px 10px 20px;
 }
 
 .cardgpl h2, .gplcard1 h1 {
@@ -96,7 +96,7 @@ table.updategpl th {
     border-left-width: 4px;
     box-shadow: 0 1px 1px rgba(0,0,0,.04);
     margin: 5px 15px 2px;
-    padding: 10px 12px;
+    padding: 10px 12px 10px 20px;
 }
 
 .tab-pane h2 {
@@ -112,7 +112,7 @@ display: block;
     border-left-width: 4px;
     box-shadow: 0 1px 1px rgba(0,0,0,.04);
     margin: 5px 15px 2px;
-    padding: 10px 12px;
+    padding: 10px 12px 10px 20px;
 }
 
 .gplmyplugactive {
