--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -1,3 +1,12 @@
+.gpllogin {
+    font-size: 15px;
+    color: #333333;
+}
+
+table.form-table {
+    margin-top: 20px;
+}
+
 input[type=email], input[type=password], input[type=search], input[type=text]{
     line-height: 2;
     min-height: 30px;
