--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -181,7 +181,7 @@ display: block;
     transition: background-color .3s;
 }
 
-.wrap h1, .wrap h2
+.wrapgpl h1, .wrapgpl h2
 {
   font-size: 18px;
   font-weight: 600;
