--- a/assets/mystyle.css
+++ b/assets/mystyle.css
@@ -1,9 +1,11 @@
-.form-table td, .form-table th
+.form-table td
 {
 padding: 10px;
 }
 .form-table th {
     vertical-align: middle;
+    padding: 10px 10px 10px 0px;
+
 }
 
 .gpllogin {
